--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ android-gradle-plugin = "7.0.0"
 android-lint = "27.3.0-alpha05"
 
 # Android X
-androidx-compose = "1.0.0-rc01"
+androidx-compose = "1.0.1"
 androidx-lifecycle = "2.4.0-alpha02"
 androidx-room = "2.4.0-alpha03"
 androidx-test = "1.3.0"
@@ -23,7 +23,7 @@ google-accompanist = "0.13.0"
 google-dagger = "2.38.1"
 
 # Kotlin
-kotlin = "1.5.10"
+kotlin = "1.5.21"
 
 # Kotlin Coroutines
 kotlinx-coroutines = "1.5.1"
@@ -62,17 +62,21 @@ androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.6.0" }
 androidx-palette = { module = "androidx.palette:palette-ktx", version = "1.0.0" }
 
 # AndroidX Compose
+androidx-compose-ui-core = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose" }
+# Tooling support (Previews, etc.)
+androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose" }
+# Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "androidx-compose" }
+# Material Components
+androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose" }
 androidx-compose-animation = { module = "androidx.compose.animation:animation", version.ref = "androidx-compose" }
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "androidx-compose" }
-androidx-compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "androidx-compose" }
 androidx-compose-layout = { module = "androidx.compose.foundation:foundation-layout", version.ref = "androidx-compose" }
 androidx-compose-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "androidx-compose" }
-androidx-compose-material = { module = "androidx.compose.material:material", version.ref = "androidx-compose" }
+
 androidx-compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "androidx-compose" }
-androidx-compose-ui-core = { module = "androidx.compose.ui:ui", version.ref = "androidx-compose" }
+
 androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test", version.ref = "androidx-compose" }
-androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose" }
-androidx-compose-ui-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-compose" }
 
 # Androidx Hilt
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
@@ -178,7 +182,7 @@ android-tools-lint = ["android-tools-layoutlib-api", "android-tools-lint-api",
 androidx-compose = ["androidx-compose-animation", "androidx-compose-compiler",
     "androidx-compose-foundation", "androidx-compose-layout", "androidx-compose-livedata",
     "androidx-compose-material", "androidx-compose-runtime", "androidx-compose-ui-core",
-    "androidx-compose-ui-test", "androidx-compose-ui-tooling", "androidx-compose-ui-preview"]
+    "androidx-compose-ui-test", "androidx-compose-ui-tooling"]
 
 # AndroidX Test
 androdidx-test = ["androidx-test-core", "androidx-test-ext-junit", "androidx-test-rules", "androidx-test-runner"]
