--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -1,8 +1,6 @@
 name: Android CI Code Refactor
 
 on:
-  push:
-    branches: [ develop ]
   pull_request:
     branches: [ develop ]
 
@@ -19,10 +17,9 @@ jobs:
         shell: bash
         run: |
           echo "name=BUILD_NUMBER::$(expr $GITHUB_RUN_NUMBER + 5200)" >> GITHUB_ENV
-
       - uses: actions/checkout@v2
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
@@ -32,36 +29,44 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Copy CI gradle.properties
-        run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
-
-      - name: Current branch name
+      - name: Head branch name
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: new_branch_name
+        run: echo "##[set-output name=branch;]$(echo ${HEAD_BRANCH})"
+        env:
+          HEAD_BRANCH: ${{ github.head_ref }}
+        id: head_branch_name
 
       - name: Create new github branch
         uses: peterjgrainger/action-create-branch@v2.0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          branch: ${{ steps.new_branch_name.outputs.branch }}-refactored
+          branch: ${{ steps.head_branch_name.outputs.branch }}-refactored
 
-      - name: Update and checkout new branch with base branch
+      - name: Fetch and checkout new branch from base branch
         run: |
-          git fetch origin ${{ steps.new_branch_name.outputs.branch }}:${{ steps.new_branch_name.outputs.branch }}-refactored
-          git checkout ${{ steps.new_branch_name.outputs.branch }}-refactored
-          git push origin ${{ steps.new_branch_name.outputs.branch }}-refactored
-
+          git fetch origin ${{ steps.head_branch_name.outputs.branch }}:${{ steps.head_branch_name.outputs.branch }}-refactored
+          git checkout ${{ steps.head_branch_name.outputs.branch }}-refactored
       - name: Reformat Code
-        run: |
-          ./gradlew spotlessApply
-          git checkout ${{ steps.new_branch_name.outputs.branch }}
+        run: ./gradlew spotlessApply
+        id: reformat
 
-      - name: Create Pull Request if changes have been detected
+      - name: Checkout base branch
+        run: git checkout ${{ steps.head_branch_name.outputs.branch }}
+        if: steps.reformat.outputs.exit_code == 0
+
+      - name: Create Pull Request
+        id: cpr
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: ${{ steps.new_branch_name.outputs.branch }}-refactored
+          committer: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+          author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
+          branch: ${{ steps.head_branch_name.outputs.branch }}-refactored
           commit-message: Spotless Applied, Code Reformatted
-          title: Refactored code for branch name ${{ steps.new_branch_name.outputs.branch }}
+          title: Spotless applied on ${{ steps.head_branch_name.outputs.branch }}
           body: This is an auto refactored code.
+          delete-branch: true
+
+      - name: Branch cleanup
+        if: steps.reformat.outputs.exit_code != 0
+        run: git push -d origin ${{ steps.head_branch_name.outputs.branch }}-refactored
