--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 # Plugins
-ktlint = "0.37.2"
+ktlint = "0.43.2"
 spotless = "5.12.5"
 ben-manes-dependency-updates = "0.39.0"
 
@@ -9,30 +9,30 @@ android-gradle-plugin = "7.2.0-alpha07"
 android-lint = "30.0.2"
 
 # Android X
-androidx-compose = "1.1.0-alpha03"
-androidx-lifecycle = "2.4.0-alpha03"
-androidx-room = "2.4.0-alpha04"
+androidx-compose = "1.2.0-alpha01"
+androidx-lifecycle = "2.4.0"
+androidx-room = "2.4.1"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
 #Coil
-coil = "1.3.2"
+coil = "2.0.0-alpha06"
 
 # Google
-google-accompanist = "0.17.0"
-google-dagger = "2.38.1"
+google-accompanist = "0.24.0-alpha"
+google-dagger = "2.40.5"
 
 # Kotlin
-kotlin = "1.5.30"
+kotlin = "1.6.10"
 
 # Kotlin Coroutines
 kotlinx-coroutines = "1.5.2"
 
 # Moshi
-moshi = "1.12.0"
+moshi = "1.13.0"
 
 # OkHttp
-okhttp = "4.9.1"
+okhttp = "5.0.0-alpha.3"
 
 # Retrofit
 retrofit = "2.9.0"
@@ -55,10 +55,10 @@ android-tools-lint-checks = { module = "com.android.tools.lint:lint-checks", ver
 android-tools-sdk-common = { module = "com.android.tools:sdk-common", version.ref = "android-lint" }
 
 # AndroidX
-androidx-annotation = { module = "androidx.annotation:annotation", version = "1.3.0-alpha01" }
-androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.3.1" }
-androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.0-beta02" }
-androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.6.0" }
+androidx-annotation = { module = "androidx.annotation:annotation", version = "1.4.0-alpha01" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.4.1" }
+androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version = "1.0.0" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.8.0-alpha02" }
 androidx-palette = { module = "androidx.palette:palette-ktx", version = "1.0.0" }
 
 # AndroidX Compose
@@ -80,15 +80,15 @@ androidx-compose-ui-test = { module = "androidx.compose.ui:ui-test", version.ref
 
 # Androidx Hilt
 androidx-hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "androidx-hilt" }
-androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.0.0-alpha03" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version = "1.0.0-rc01" }
 androidx-hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "androidx-hilt" }
 
 # AndroidX Lifecycle
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version = "1.0.0-alpha07" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
 
 # AndroidX Navigation
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.4.0-alpha08" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version = "2.4.0-rc01" }
 
 # AndroidX Room
 androidx-room-common = { module = "androidx.room:room-common", version.ref = "androidx-room" }
@@ -100,8 +100,8 @@ androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "
 
 # AndroidX Test
 androidx-test-core = { module = "androidx.test:core", version.ref = "androidx-test" }
-androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.4.0" }
-androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.3" }
+androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core", version = "3.5.0-alpha03" }
+androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.4-alpha03" }
 androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-test" }
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
 
@@ -128,8 +128,8 @@ google-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", 
 google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "google-dagger" }
 
 # Google Material Theme
-google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.0.2" }
-google-material-core = { module = "com.google.android.material:material", version = "1.5.0-alpha03" }
+google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.1.3" }
+google-material-core = { module = "com.google.android.material:material", version = "1.6.0-alpha02" }
 
 # Google Firebase
 google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "17.2.1" }
@@ -153,6 +153,7 @@ kotlinx-corroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-
 moshi-adapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
 moshi-core = { module = "com.squareup.moshi:moshi", version.ref = "moshi" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
+moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshi" }
 
 # OkHttp
 okhttp-core = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
@@ -169,7 +170,7 @@ test-mock-core = { module = "io.mockk:mockk", version = "1.9.3" }
 test-robolectric-core = { module = "org.robolectric:robolectric", version = "4.3.1" }
 
 # Timber
-timber = { module = "com.jakewharton.timber:timber", version = "4.7.1" }
+timber = { module = "com.jakewharton.timber:timber", version = "5.0.1" }
 
 [bundles]
 
