--- a/.github/workflows/refactor.yml
+++ b/.github/workflows/refactor.yml
@@ -62,6 +62,11 @@ jobs:
           committer: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
           author: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
           branch: ${{ steps.head_branch_name.outputs.branch }}-refactored
+          labels: refactor
+          assignees: <github-actions[bot]@users.noreply.github.com>
+          reviewers: |
+            akshay253101
+            kameshyadavky
           commit-message: Spotless Applied, Code Reformatted
           title: Spotless applied on ${{ steps.head_branch_name.outputs.branch }}
           body: This is an auto refactored code.
