--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 # Plugins
-ktlint = "0.43.2"
+ktlint = "0.45.2"
 spotless = "5.12.5"
 ben-manes-dependency-updates = "0.39.0"
 
@@ -9,30 +9,30 @@ android-gradle-plugin = "7.2.0-alpha07"
 android-lint = "30.0.2"
 
 # Android X
-androidx-compose = "1.2.0-alpha04"
-androidx-lifecycle = "2.5.0-alpha03"
+androidx-compose = "1.2.0-beta01"
+androidx-lifecycle = "2.5.0-beta01"
 androidx-room = "2.5.0-alpha01"
 androidx-test = "1.3.0"
 androidx-hilt = "1.0.0"
 
 #Coil
-coil = "2.0.0-rc01"
+coil = "2.0.0"
 
 # Google
-google-accompanist = "0.24.3-alpha"
-google-dagger = "2.41"
+google-accompanist = "0.24.8-beta"
+google-dagger = "2.42"
 
 # Kotlin
-kotlin = "1.6.10"
+kotlin = "1.6.21"
 
 # Kotlin Coroutines
-kotlinx-coroutines = "1.6.0"
+kotlinx-coroutines = "1.6.1"
 
 # Moshi
 moshi = "1.13.0"
 
 # OkHttp
-okhttp = "5.0.0-alpha.5"
+okhttp = "5.0.0-alpha.7"
 
 # Retrofit
 retrofit = "2.9.0"
@@ -106,7 +106,7 @@ androidx-test-rules = { module = "androidx.test:rules", version.ref = "androidx-
 androidx-test-runner = { module = "androidx.test:runner", version.ref = "androidx-test" }
 
 # AndroidX Work
-androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version = "2.4.0" }
+androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version = "2.8.0-alpha02" }
 
 # Coil
 coil-core = { module = "io.coil-kt:coil", version.ref = "coil" }
@@ -128,17 +128,17 @@ google-hilt-gradle = { module = "com.google.dagger:hilt-android-gradle-plugin", 
 google-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "google-dagger" }
 
 # Google Material Theme
-google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.1.5" }
-google-material-core = { module = "com.google.android.material:material", version = "1.6.0-alpha03" }
+google-material-compose-theme-adapter = { module = "com.google.android.material:compose-theme-adapter", version = "1.1.9" }
+google-material-core = { module = "com.google.android.material:material", version = "1.6.0" }
 
 # Google Firebase
-google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "17.2.1" }
+google-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics", version = "18.2.10" }
 
 # Google Truth
 google-truth = { module = "com.google.truth:truth", version = "1.1.3" }
 
 # Leak Canary
-leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.2" }
+leakcanary = { module = "com.squareup.leakcanary:leakcanary-android", version = "2.9.1" }
 
 # Kotlin
 kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
