--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ spotless = "6.8.0"
 ben-manes-dependency-updates = "0.42.0"
 
 # Android
-android-gradle-plugin = "7.4.0-alpha07"
+android-gradle-plugin = "7.4.0-alpha08"
 android-lint = "30.0.2"
 
 # Android X
@@ -174,6 +174,9 @@ test-robolectric-core = { module = "org.robolectric:robolectric", version = "4.3
 
 # Timber
 timber = { module = "com.jakewharton.timber:timber", version = "5.0.1" }
+
+# Spotless
+spotless-gradle-plugin = { group = "com.diffplug.spotless", name = "spotless-plugin-gradle", version.ref = "spotless" }
 
 [bundles]
 
